cabal-version:      3.0
name:               pristine-analysis
version:            0.1.0.0
synopsis:           Pristine analysis
description:
  Provides simple statistical analysis for single-argument benchmarks which is robust to outliers and makes no assumptions about underlying distributions.
license:            BSD-3-Clause
license-file:       LICENSE
author:             L. S. Leary
maintainer:         L.S.Leary.II@gmail.com
copyright:          (c) 2026 L. S. Leary
category:           Benchmarking Statistics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:        GHC == 9.6.7
                    GHC == 9.8.4
                    GHC == 9.10.2
                    GHC == 9.12.2
                 -- Requires --allow-newer=all:base
                 -- (dependencies require revision)
                 -- GHC == 9.14.1

common  shared
  build-depends:      base >= 4.18 && < 4.23,
  default-language:   Haskell2010
  default-extensions: RoleAnnotations
                      PolyKinds
                      ConstraintKinds
                      KindSignatures
                      StandaloneKindSignatures
                      ScopedTypeVariables
                      TypeApplications
                      TypeOperators
                      FlexibleContexts
                      FlexibleInstances
                      DeriveGeneric
                      DeriveTraversable
                      DeriveAnyClass
                      DerivingVia
                      GeneralisedNewtypeDeriving
                      StandaloneDeriving
                      BangPatterns
                      BlockArguments
                      LambdaCase
                      NamedFieldPuns
                      LexicalNegation
                      TupleSections
                      NumericUnderscores
                      PostfixOperators
  ghc-options:        -Wall
                      -Wcompat

common  analysis
  hs-source-dirs:     src/
  build-depends:      vector   >= 0.7.1 && < 0.14,
                      hmatrix  >= 0.8   && < 0.21,
                      poly     >= 0.3   && < 0.6 ,
                      pristine >= 0.1   && < 0.2 ,
library
  import:             shared, analysis,
  exposed-modules:    Pristine.Analysis

source-repository head
  type:     git
  location: https://github.com/LSLeary/pristine.git

