cabal-version:      3.0
name:               pristine
version:            0.1.0.0
synopsis:           The light-weight core of the pristine benchmarking suite
description:
  Takes pristine measurements, streaming them to disk in a simple CSV format so you can later visualise or analyse the data any way you please.
license:            BSD-3-Clause
license-file:       LICENSE
author:             L. S. Leary
maintainer:         L.S.Leary.II@gmail.com
copyright:          (c) 2026 L. S. Leary
category:           Benchmarking
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:        GHC == 9.6.7
                    GHC == 9.8.4
                    GHC == 9.10.2
                    GHC == 9.12.2
                 -- Requires --allow-newer=all:base
                 -- (dependencies require revision)
                 -- GHC == 9.14.1

common  shared
  build-depends:      base >= 4.18 && < 4.23,
  default-language:   Haskell2010
  default-extensions: RoleAnnotations
                      PolyKinds
                      ConstraintKinds
                      KindSignatures
                      StandaloneKindSignatures
                      ScopedTypeVariables
                      TypeApplications
                      TypeOperators
                      FlexibleContexts
                      FlexibleInstances
                      DeriveGeneric
                      DeriveTraversable
                      DeriveAnyClass
                      DerivingVia
                      GeneralisedNewtypeDeriving
                      StandaloneDeriving
                      BangPatterns
                      BlockArguments
                      LambdaCase
                      NamedFieldPuns
                      LexicalNegation
                      TupleSections
                      NumericUnderscores
                      PostfixOperators
  ghc-options:        -Wall
                      -Wcompat

common  core
  hs-source-dirs:     src/core/
  build-depends:      primitive     >= 0.8       && < 0.10,
                      bytestring    >= 0.10.8    && < 0.13,
                      deepseq       >= 1.4.3     && < 1.6 ,
                      vector        >= 0.7.1     && < 0.14,
                      text          >= 1.2.2     && < 2.2 ,
                      transformers  >= 0.3       && < 0.7 ,
                      random        >= 1.2       && < 1.4 ,
                      filepath      >= 1.4.100.0 && < 1.6 ,
                      directory     >= 1.3.8.0   && < 1.4 ,
                      ansi-terminal >= 0.4       && < 1.2 ,
                      cassava       >= 0.4.3     && < 0.6 ,
                      poly          >= 0.3       && < 0.6 ,
  other-modules:      Pristine.Internal
library
  import:             shared, core,
  exposed-modules:    Pristine.Data
                      Pristine.Measurement
                      Pristine.Compat

common     sanity
  hs-source-dirs:     src/sanity/
  build-depends:      text,
                      vector,
                      filepath,
  other-modules:      Pristine.Sanity
test-suite sanity
  import:             shared, sanity,
  type:               exitcode-stdio-1.0
  build-depends:      pristine,
  main-is:            Main.hs
  ghc-options:        -fproc-alignment=64

source-repository head
  type:     git
  location: https://github.com/LSLeary/pristine.git

