cabal-version:      3.0
name:               pristine-vis-Chart
version:            0.1.0.0
synopsis:           Pristine visualisation with Chart
description:
  Makes scatter plots from single-argument benchmarks, optionally plotting estimated medians and your choice of inter-quantile ranges.
license:            BSD-3-Clause
license-file:       LICENSE
author:             L. S. Leary
maintainer:         L.S.Leary.II@gmail.com
copyright:          (c) 2026 L. S. Leary
category:           Benchmarking Charts
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:        GHC == 9.6.7
                    GHC == 9.8.4
                    GHC == 9.10.2
                    GHC == 9.12.2
                 -- Requires --allow-newer=all:base
                 -- (dependencies require revision)
                 -- GHC == 9.14.1

common  shared
  build-depends:      base >= 4.18 && < 4.23,
  default-language:   Haskell2010
  default-extensions: RoleAnnotations
                      PolyKinds
                      ConstraintKinds
                      KindSignatures
                      StandaloneKindSignatures
                      ScopedTypeVariables
                      TypeApplications
                      TypeOperators
                      FlexibleContexts
                      FlexibleInstances
                      DeriveGeneric
                      DeriveTraversable
                      DeriveAnyClass
                      DerivingVia
                      GeneralisedNewtypeDeriving
                      StandaloneDeriving
                      BangPatterns
                      BlockArguments
                      LambdaCase
                      NamedFieldPuns
                      LexicalNegation
                      TupleSections
                      NumericUnderscores
                      PostfixOperators
  ghc-options:        -Wall
                      -Wcompat

common  vis-Chart
  hs-source-dirs:     src/vis-Chart/
  build-depends:      text               >= 1.2.2  && < 2.2 ,
                      containers         >= 0.5.11 && < 0.9 ,
                      vector             >= 0.7.1  && < 0.14,
                      poly               >= 0.3    && < 0.6 ,
                      data-default-class >= 0      && < 0.3 ,
                      colour             >= 1      && < 2.4 ,
                      Chart              >= 1.1    && < 1.10,
                      pristine           >= 0.1    && < 0.2 ,
library
  import:             shared, vis-Chart,
  exposed-modules:    Pristine.Vis.Chart

common  rendering-cairo
  hs-source-dirs:     src/rendering-cairo/
  build-depends:      filepath    >= 1.4.100.0 && < 1.6 ,
                      directory   >= 1.3.8.0   && < 1.4 ,
                      Chart       >= 1.1       && < 1.10,
                      Chart-cairo >= 1.2       && < 1.10,
library rendering-cairo
  import:             shared, rendering-cairo,
  visibility:         public
  exposed-modules:    Pristine.Vis.Chart.Cairo

common  rendering-diagrams
  hs-source-dirs:     src/rendering-diagrams/
  build-depends:      filepath       >= 1.4.100.0 && < 1.6 ,
                      directory      >= 1.3.8.0   && < 1.4 ,
                      Chart          >= 1.1       && < 1.10,
                      Chart-diagrams >= 1.5       && < 1.10,
library rendering-diagrams
  import:             shared, rendering-diagrams,
  visibility:         public
  exposed-modules:    Pristine.Vis.Chart.Diagrams

source-repository head
  type:     git
  location: https://github.com/LSLeary/pristine.git

